tests/snapshots/test_trigger_shared_uuid__trigger_last_insert_rowid_pattern.snap
---
source: tests/test_trigger_shared_uuid.rs
expression: "&sqlite_sql"
---
PRAGMA foreign_keys = 1;
CREATE TABLE entities (id BLOB PRIMARY KEY DEFAULT (uuidv7()) CHECK (length(id) = 16) NOT NULL, name TEXT NOT NULL) STRICT;
CREATE TABLE ownables (id BLOB PRIMARY KEY REFERENCES entities (id) CHECK (length(id) = 16) NOT NULL, owner TEXT NOT NULL) STRICT;
CREATE TABLE parent_relations (id BLOB PRIMARY KEY DEFAULT (uuidv7()) CHECK (length(id) = 16) NOT NULL, entity_id BLOB NOT NULL REFERENCES entities (id) CHECK (length(entity_id) = 16), parent_name TEXT NOT NULL) STRICT;
CREATE TRIGGER trigger_create_entity BEFORE INSERT ON entities FOR EACH ROW BEGIN INSERT INTO entities (id, name) WITH v_new_id (val) AS (SELECT uuidv7()) SELECT (SELECT val FROM v_new_id), NEW.name; INSERT INTO ownables (id, owner) WITH v_new_id (val) AS (SELECT (SELECT id FROM entities WHERE rowid = last_insert_rowid())) SELECT (SELECT val FROM v_new_id), 'system'; INSERT INTO parent_relations (entity_id, parent_name) WITH v_new_id (val) AS (SELECT (SELECT id FROM entities WHERE rowid = last_insert_rowid())) SELECT (SELECT val FROM v_new_id), 'root'; END
