tests/snapshots/test_trigger_shared_uuid__trigger_shared_uuid_works_in_sqlite.snap
---
source: tests/test_trigger_shared_uuid.rs
expression: translated_sql
---
PRAGMA foreign_keys = 1
CREATE TABLE entities (id BLOB PRIMARY KEY DEFAULT (uuidv7()) CHECK (length(id) = 16) NOT NULL, name TEXT NOT NULL) STRICT
CREATE TABLE ownables (id BLOB PRIMARY KEY REFERENCES entities (id) CHECK (length(id) = 16) NOT NULL, owner TEXT NOT NULL) STRICT
CREATE TABLE entity_staging (name TEXT NOT NULL, owner TEXT NOT NULL) STRICT
CREATE TRIGGER trigger_create_entity_ownable AFTER INSERT ON entity_staging FOR EACH ROW BEGIN INSERT INTO entities (id, name) WITH v_new_id (val) AS (SELECT uuidv7()) SELECT (SELECT val FROM v_new_id), NEW.name; INSERT INTO ownables (id, owner) WITH v_new_id (val) AS (SELECT (SELECT id FROM entities WHERE rowid = last_insert_rowid())) SELECT (SELECT val FROM v_new_id), NEW.owner; END
