tests/snapshots/test_trigger_shared_uuid__trigger_three_tables_shared_uuid.snap
---
source: tests/test_trigger_shared_uuid.rs
expression: translated_sql
---
PRAGMA foreign_keys = 1
PRAGMA case_sensitive_like = 1
CREATE TABLE entities (id BLOB PRIMARY KEY DEFAULT (uuidv7()) CHECK (length(id) = 16) NOT NULL, name TEXT NOT NULL) STRICT
CREATE TABLE ownables (id BLOB PRIMARY KEY REFERENCES entities (id) CHECK (length(id) = 16) NOT NULL, owner TEXT NOT NULL) STRICT
CREATE TABLE metadata (entity_id BLOB PRIMARY KEY REFERENCES entities (id) CHECK (length(entity_id) = 16) NOT NULL, created_at TEXT NOT NULL DEFAULT 'now') STRICT
CREATE TABLE entity_input (name TEXT NOT NULL) STRICT
CREATE TRIGGER trigger_create_full_entity AFTER INSERT ON entity_input FOR EACH ROW BEGIN INSERT INTO entities (id, name) WITH v_new_id (val) AS (SELECT uuidv7()) SELECT (SELECT val FROM v_new_id), NEW.name; INSERT INTO ownables (id, owner) WITH v_new_id (val) AS (SELECT (SELECT id FROM entities WHERE rowid = last_insert_rowid())) SELECT (SELECT val FROM v_new_id), 'system'; INSERT INTO metadata (entity_id) WITH v_new_id (val) AS (SELECT (SELECT id FROM entities WHERE rowid = last_insert_rowid())) SELECT (SELECT val FROM v_new_id); END
